# spectra-app-v2

./: .gitignore  .timestamp_tmp.txt  AGENTS.md  AUDIT_REPORT.md  CLEANUP_APPROVAL_NEEDED.md  CLEANUP_INVENTORY.md  CONTRIBUTING.md  HOUSEKEEPING_PLAN.md  IMPLEMENTATION_SUMMARY.md  IR_EXPANSION_SUMMARY.md  NORMALIZATION_VERIFICATION.md  README.md  RunSpectraApp.cmd  RunSpectraApp.ps1  RunSpectraApp.py  RunSpectraApp_Conda.cmd  SAMPLES_ANALYSIS.md  START_HERE.md  STORAGE_ANALYSIS.md  actual clean up.md  environment.yml  gitapply_clean.patch  goals.txt  patch.patch  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  sitecustomize.py  test_exoplanet_manual.py  test_global_normalization.py  test_history.md  test_normalization_debug.py  test_spex_manual.py
.github/: copilot-instructions.md  pull_request_template.md
app/: __init__.py  constants.py  logging_config.py  main.py  qt_compat.py
docs/: BUILD_WINDOWS.md  Comprehensive Enhancement Plan for Spectra App.md  DATA_ACQUISITION_PIPELINE.md  Development history of the Spectra App project.md  ENHANCEMENT_PLAN_STATUS.md  INDEX.md  QUICK_START_BULK_DATA.md  Telescope-Based Planetary Datasets (UV-VIS and IR).docx  Telescope-Based Planetary datasets.md  app_capabilities.md  developer_notes.md  link_collection.md  repo_inventory.md  spectra_history.md
downloads/: index.json
examples/: uncertainty_demo.py
exports/: merge test 1_wide.csv  merged test.csv
packaging/: msix-template.xml  spectra_app.spec  windows_build.md
past prompts/: first prompt.txt
reports/: AUDIT_REPORT.md  bugs_and_issues.md  (+9 more)
(+1241 files in other folders)
