[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-app"
version = "0.0.0"
description = "Spectra desktop preview utilities"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.3",
    "PySide6>=6.8.2,<6.11",
    "pyqtgraph==0.13.7",
    "pytest==8.4.1",
    "astropy==7.1.1",
]

[project.optional-dependencies]
remote = [
    "requests==2.32.4",
    "astroquery==0.4.7",
]

[tool.pytest.ini_options]
markers = [
    "roundtrip: Validate round-trip ingest/export workflows.",
    "ui_contract: UI contract tests that require a Qt display.",
]

